# livewallpaperfree

./: CMakeLists.txt  README.md  errors
CMakeProject1/: CMakeLists.txt
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
Project1/Project1/: Project1.vcxproj
Project1/Project1/x64/Debug/: Project1.exe.recipe
Project1/Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate
assets/config/: settings.json
include/nlohmann/: json.hpp
scripts/: build.bat  build.ps1
src/: main.cpp
src/config/: config_manager.cpp  config_manager.h  json_loader.cpp  json_loader.h
src/core/: application.cpp  application.h  message_loop.cpp  message_loop.h  window.cpp  window.h
src/system/: fullscreen_detector.cpp  fullscreen_detector.h  monitor_manager.cpp  monitor_manager.h  process_monitor.cpp  process_monitor.h  visibility_detector.cpp  visibility_detector.h
src/ui/: settings_window.cpp  settings_window.h  tray_icon.cpp  tray_icon.h  volume_slider.cpp  volume_slider.h
src/utils/: file_utils.cpp  file_utils.h  logger.cpp  logger.h  timers.cpp  timers.h
src/video/: audio_controller.cpp  audio_controller.h  media_controller.cpp  media_controller.h  mf_player.cpp  mf_player.h  mpv_player.cpp  mpv_player.h
src/wallpaper/: desktop_attach.cpp  desktop_attach.h  wallpaper_window.cpp  wallpaper_window.h  workerw.cpp  workerw.h
